--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <li>Bônus: currículo pronto para preencher</li>
     </ul>
 
-    <a href="https://linktr.ee/bruno" target="_blank" class="btn">INSCREVA-SE AGORA</a>
+    <a href="https://linktr.ee/7michelson" target="_blank" class="btn">INSCREVA-SE AGORA</a>
   </div>
 
   <footer>
