--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 <body>
   <header>
     <h1>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Overleaf_logo_icon.svg" alt="Overleaf" class="logo-overleaf">
+      <img src="overleaf-icon.png" alt="Overleaf" class="logo-overleaf">
+
       Do Word ao LaTeX sem Sofrer
     </h1>
     <p>Crie documentos elegantes no Overleaf, direto do navegador, mesmo que nunca tenha usado LaTeX!</p>
