--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
 
   <footer>
-    &copy; 2025 - Curso por Bruno Michelson Lopes Dantas | Powered by LaTeX & Overleaf
+    &copy; 2025 - Curso por Bruno Dantas | Powered by LaTeX & Overleaf
   </footer>
 </body>
 </html>
