--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <link rel="icon" type="image/x-icon" href="favicon (1).ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -66,9 +66,10 @@
 <body>
   <header>
     <h1>
-      <img src="overleaf-icon.png" alt="Overleaf" class="logo-overleaf">
+      <img src="fox-icon.png" alt="Overleaf" class="logo-overleaf">
 
       Do Word ao LaTeX sem Sofrer
+      <img src="overleaf-icon.png" alt="Overleaf" class="logo-overleaf">
     </h1>
     <p>Crie documentos elegantes no Overleaf, direto do navegador, mesmo que nunca tenha usado LaTeX!</p>
   </header>
