--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <link rel="icon" type="image/x-icon" href="favicon_custom.ico">
-
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Do Word ao LaTeX sem Sofrer</title>
@@ -62,6 +62,8 @@
       margin-right: 10px;
     }
   </style>
+  <meta name="description" content="Aprenda a criar documentos profissionais no LaTeX com o curso 'Do Word ao LaTeX sem Sofrer'. Ideal para iniciantes!">
+  <meta name="keywords" content="curso LaTeX, aprender LaTeX, documentos LaTeX, LaTeX para iniciantes">
 </head>
 <body>
   <header>
