--- a/index.html
+++ b/index.html
@@ -27,17 +27,47 @@
     header p {
       font-size: 1.3rem;
     }
-    .content {
-      padding: 30px 20px;
-      max-width: 800px;
-      margin: auto;
+    .pricing {
+      font-size: 1.2rem;
+      margin: 20px 0;
     }
-    .content h2 {
-      color: #0f9d58;
+    .price {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #2d6a4f;
     }
-    ul li {
-      margin-bottom: 10px;
+    .old-price {
+      text-decoration: line-through;
+      color: #9e9e9e;
+      font-size: 1.2rem;
+    }
+    .discount {
+      color: #f44336;
+      font-weight: bold;
+      font-size: 1.3rem;
+    }
+    .carousel {
+      display: flex;
+      overflow-x: scroll;
+      gap: 20px;
+      padding: 10px 0;
+      scroll-behavior: smooth;
+    }
+    .carousel-item {
+      background-color: #ffffff;
+      padding: 10px;
+      border-radius: 8px;
+      width: 200px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+    .carousel-item h3 {
       font-size: 1.1rem;
+      margin-bottom: 10px;
+    }
+    .carousel-item p {
+      font-size: 0.9rem;
+      color: #555;
     }
     .btn {
       display: inline-block;
@@ -56,45 +86,64 @@
       background: #0f9d58;
       color: white;
     }
-    .logo-overleaf {
-      width: 50px;
-      vertical-align: middle;
-      margin-right: 10px;
-    }
   </style>
   <meta name="description" content="Aprenda a criar documentos profissionais no LaTeX com o curso 'Do Word ao LaTeX sem Sofrer'. Ideal para iniciantes!">
   <meta name="keywords" content="curso LaTeX, aprender LaTeX, documentos LaTeX, LaTeX para iniciantes">
 </head>
 <body>
+
   <header>
     <h1>
-      <img src="fox-icon.png" alt="Overleaf" class="logo-overleaf">
-
+      <img src="fox-icon.png" alt="Fox Logo" class="logo-overleaf">
       Do Word ao LaTeX sem Sofrer
       <img src="overleaf-icon.png" alt="Overleaf" class="logo-overleaf">
     </h1>
     <p>Crie documentos elegantes no Overleaf, direto do navegador, mesmo que nunca tenha usado LaTeX!</p>
   </header>
 
-  <div class="content">
-    <h2>Você vai aprender a:</h2>
-    <ul>
-      <li>Usar o Overleaf com templates prontos e fáceis</li>
-      <li>Editar textos, currículos, relatórios e propostas</li>
-      <li>Personalizar fonte, cor, estrutura e exportar seu PDF</li>
-    </ul>
-    <h2>Inclui:</h2>
-    <ul>
-      <li>Templates editáveis profissionais</li>
-      <li>Vídeos rápidos e diretos</li>
-      <li>Bônus: currículo pronto para preencher</li>
-    </ul>
-
-    <a href="https://linktr.ee/7michelson" target="_blank" class="btn">INSCREVA-SE AGORA</a>
+  <div class="pricing">
+    <p><span class="price">R$ 24,90</span> <span class="old-price">R$ 164,90</span></p>
+    <p class="discount">82% de desconto</p>
   </div>
+
+  <h2>Conteúdo do Curso</h2>
+
+  <div class="carousel">
+    <div class="carousel-item">
+      <h3>Como Criar um Documento?</h3>
+      <p>5 aulas - 25 minutos</p>
+    </div>
+    <div class="carousel-item">
+      <h3>Como Formatar um Documento?</h3>
+      <p>8 aulas - 48 minutos</p>
+    </div>
+    <div class="carousel-item">
+      <h3>Como Deixar um Documento em Qualidade Final?</h3>
+      <p>7 aulas - 48 minutos</p>
+    </div>
+    <div class="carousel-item">
+      <h3>Como Usar o Ambiente Matemático do LaTeX?</h3>
+      <p>4 aulas - 21 minutos</p>
+    </div>
+    <div class="carousel-item">
+      <h3>Como Criar uma Bibliografia e Citações?</h3>
+      <p>4 aulas - 23 minutos</p>
+    </div>
+    <div class="carousel-item">
+      <h3>Bônus: Como Criar Apresentações?</h3>
+      <p>2 aulas - 20 minutos</p>
+    </div>
+    <div class="carousel-item">
+      <h3>Bônus: Como Personalizar o TexStudio?</h3>
+      <p>9 aulas - 31 minutos</p>
+    </div>
+  </div>
+
+  <a href="https://linktr.ee/7michelson" target="_blank" class="btn">INSCREVA-SE AGORA</a>
 
   <footer>
     &copy; 2025 - Curso por Bruno Dantas | Powered by LaTeX & Overleaf
   </footer>
+
 </body>
 </html>
