--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     header p {
       font-size: 1.3rem;
     }
+    header h1 img {
+      width: 40px;  /* Ajusta o tamanho das imagens */
+      height: auto;
+      vertical-align: middle;
+      margin-right: 10px;
+    }
     .pricing {
       font-size: 1.2rem;
       margin: 20px 0;
