--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 
     .card img {
       width: 100%;
+      height: 200px; /* Ajuste da altura para todas as imagens */
+      object-fit: cover; /* Mantém a proporção da imagem sem distorcer */
       border-radius: 8px;
     }
 
@@ -106,6 +108,11 @@
     .card-content p {
       font-size: 0.9rem;
       color: #555;
+    }
+
+    .card:hover {
+      transform: scale(1.05);
+      z-index: 3;
     }
 
     .btn {
@@ -126,7 +133,6 @@
       background: #0f9d58;
       color: white;
     }
-
   </style>
   <meta name="description" content="Aprenda a criar documentos profissionais no LaTeX com o curso 'Do Word ao LaTeX sem Sofrer'. Ideal para iniciantes!">
   <meta name="keywords" content="curso LaTeX, aprender LaTeX, documentos LaTeX, LaTeX para iniciantes">
