--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     </div>
 
     <div class="card">
-      <img src="https://i1.rgstatic.net/publication/304224881_Modelo_LaTeX_para_teses_e_dissertacoes_em_Programa_de_Pos-Graduacao_construcao_e_avaliacao_de_artefato/links/577d732b08aed39f598f77f0/largepreview.png" alt="Modelo 2">
+      <img src="https://dxkck1miuebqc.cloudfront.net/books/316047/book_preview_big-7.jpg" alt="Modelo 2">
       <div class="card-content">
         <h3>Modelo Acadêmico 2</h3>
         <p>Texto explicativo sobre o segundo modelo de LaTeX utilizado no curso.</p>
