--- a/index.html
+++ b/index.html
@@ -52,29 +52,6 @@
       font-weight: bold;
       font-size: 1.3rem;
     }
-    .carousel {
-      display: flex;
-      overflow-x: scroll;
-      gap: 20px;
-      padding: 10px 0;
-      scroll-behavior: smooth;
-    }
-    .carousel-item {
-      background-color: #ffffff;
-      padding: 10px;
-      border-radius: 8px;
-      width: 200px;
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    .carousel-item h3 {
-      font-size: 1.1rem;
-      margin-bottom: 10px;
-    }
-    .carousel-item p {
-      font-size: 0.9rem;
-      color: #555;
-    }
 
     .cards-container {
       display: flex;
@@ -103,21 +80,6 @@
       border-radius: 8px;
     }
 
-    .card-content {
-      padding: 20px;
-      text-align: center;
-    }
-
-    .card-content h3 {
-      margin-bottom: 10px;
-      font-size: 1.2rem;
-    }
-
-    .card-content p {
-      font-size: 0.9rem;
-      color: #555;
-    }
-
     .card:hover {
       transform: scale(1.05);
       z-index: 3;
@@ -141,6 +103,19 @@
       background: #0f9d58;
       color: white;
     }
+
+    .features-text {
+      margin-top: 40px;
+      font-size: 1.2rem;
+      text-align: center;
+    }
+
+    .features-text h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: #0f9d58;
+    }
+
   </style>
   <meta name="description" content="Aprenda a criar documentos profissionais no LaTeX com o curso 'Do Word ao LaTeX sem Sofrer'. Ideal para iniciantes!">
   <meta name="keywords" content="curso LaTeX, aprender LaTeX, documentos LaTeX, LaTeX para iniciantes">
@@ -194,32 +169,26 @@
     </div>
   </div>
 
-  <h2>Modelos de Documentos</h2>
+  <h2>Funcionalidades Poderosas do LaTeX</h2>
 
   <div class="cards-container">
     <div class="card">
       <img src="https://preview.redd.it/what-is-the-name-of-this-template-academic-paper-v0-202gbl7urmva1.png?width=663&format=png&auto=webp&s=8c543d1effcec232167d233ac7d1aabb175536ee" alt="Modelo 1">
-      <div class="card-content">
-        <h3>Modelo Acadêmico 1</h3>
-        <p>Texto explicativo sobre o modelo e sua importância no curso.</p>
-      </div>
     </div>
 
     <div class="card">
       <img src="https://dxkck1miuebqc.cloudfront.net/books/316047/book_preview_big-7.jpg" alt="Modelo 2">
-      <div class="card-content">
-        <h3>Modelo Acadêmico 2</h3>
-        <p>Texto explicativo sobre o segundo modelo de LaTeX utilizado no curso.</p>
-      </div>
     </div>
 
     <div class="card">
       <img src="https://writelatex.s3.amazonaws.com/published_ver/5647.jpeg?X-Amz-Expires=14400&X-Amz-Date=20250425T030103Z&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAWJBOALPNFPV7PVH5/20250425/us-east-1/s3/aws4_request&X-Amz-SignedHeaders=host&X-Amz-Signature=369693ece384f7af03b07b9dcdce641af9cd64f953f8b044aad69a3ad9f1c105" alt="Modelo 3">
-      <div class="card-content">
-        <h3>Modelo Acadêmico 3</h3>
-        <p>Texto explicativo sobre o terceiro modelo utilizado nas dissertações e teses.</p>
-      </div>
     </div>
+  </div>
+
+  <div class="features-text">
+    <h2>O Que o LaTeX Pode Fazer por Você?</h2>
+    <p>O LaTeX oferece **ferramentas poderosas** para criar documentos **impecáveis**. Seja para **artigos**, **papers**, **livros** ou **apresentações**, o LaTeX facilita todo o processo de formatação, garantindo que seu conteúdo tenha uma aparência profissional e bem organizada. Com apenas alguns cliques, você pode criar **sumários automáticos**, inserir **fórmulas matemáticas**, adicionar **figuras com legendas** e **citações** no corpo do texto, tudo de maneira simples e rápida.</p>
+    <p>Venha aprender como utilizar essas ferramentas incríveis e transforme sua produção acadêmica e profissional com o LaTeX!</p>
   </div>
 
   <a href="https://linktr.ee/7michelson" target="_blank" class="btn">INSCREVA-SE AGORA</a>
