--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       font-size: 1.3rem;
     }
     header h1 img {
-      width: 40px;  /* Ajusta o tamanho das imagens */
+      width: 40px;
       height: auto;
       vertical-align: middle;
       margin-right: 10px;
@@ -36,6 +36,7 @@
     .pricing {
       font-size: 1.2rem;
       margin: 20px 0;
+      text-align: center;
     }
     .price {
       font-size: 2rem;
@@ -53,10 +54,34 @@
       font-size: 1.3rem;
     }
 
+    .carousel {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      padding: 10px 0;
+      scroll-behavior: smooth;
+    }
+    .carousel-item {
+      background-color: #ffffff;
+      padding: 10px;
+      border-radius: 8px;
+      width: 200px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+    .carousel-item h3 {
+      font-size: 1.1rem;
+      margin-bottom: 10px;
+    }
+    .carousel-item p {
+      font-size: 0.9rem;
+      color: #555;
+    }
+
     .cards-container {
       display: flex;
-      justify-content: center;  /* Centraliza os cartões na página */
-      gap: 40px;  /* Aumenta o espaço entre os cartões */
+      justify-content: center;
+      gap: 40px;
       margin-top: 40px;
       margin-bottom: 40px;
     }
@@ -75,14 +100,41 @@
 
     .card img {
       width: 100%;
-      height: 200px; /* Ajuste da altura para todas as imagens */
-      object-fit: cover; /* Mantém a proporção da imagem sem distorcer */
+      height: 200px;
+      object-fit: cover;
       border-radius: 8px;
     }
 
     .card:hover {
       transform: scale(1.05);
       z-index: 3;
+    }
+
+    .card-content {
+      padding: 20px;
+      text-align: center;
+    }
+
+    .card-content h3 {
+      margin-bottom: 10px;
+      font-size: 1.2rem;
+    }
+
+    .card-content p {
+      font-size: 0.9rem;
+      color: #555;
+    }
+
+    .features-text {
+      margin-top: 40px;
+      font-size: 1.2rem;
+      text-align: center;
+    }
+
+    .features-text h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: #0f9d58;
     }
 
     .btn {
@@ -102,18 +154,6 @@
       padding: 20px;
       background: #0f9d58;
       color: white;
-    }
-
-    .features-text {
-      margin-top: 40px;
-      font-size: 1.2rem;
-      text-align: center;
-    }
-
-    .features-text h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      color: #0f9d58;
     }
 
   </style>
