--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
       gap: 40px;
       margin-top: 40px;
       margin-bottom: 40px;
+      overflow-x: auto;  /* Habilita a rolagem */
+      width: 100%;
     }
 
     .card {
@@ -137,6 +139,11 @@
       color: #0f9d58;
     }
 
+    .features-text p {
+      font-size: 1.1rem;
+      line-height: 1.6;
+    }
+
     .btn {
       display: inline-block;
       margin-top: 30px;
@@ -155,7 +162,6 @@
       background: #0f9d58;
       color: white;
     }
-
   </style>
   <meta name="description" content="Aprenda a criar documentos profissionais no LaTeX com o curso 'Do Word ao LaTeX sem Sofrer'. Ideal para iniciantes!">
   <meta name="keywords" content="curso LaTeX, aprender LaTeX, documentos LaTeX, LaTeX para iniciantes">
@@ -227,7 +233,7 @@
 
   <div class="features-text">
     <h2>O Que o LaTeX Pode Fazer por Você?</h2>
-    <p>O LaTeX oferece **ferramentas poderosas** para criar documentos **impecáveis**. Seja para **artigos**, **papers**, **livros** ou **apresentações**, o LaTeX facilita todo o processo de formatação, garantindo que seu conteúdo tenha uma aparência profissional e bem organizada. Com apenas alguns cliques, você pode criar **sumários automáticos**, inserir **fórmulas matemáticas**, adicionar **figuras com legendas** e **citações** no corpo do texto, tudo de maneira simples e rápida.</p>
+    <p>O LaTeX oferece <strong>ferramentas poderosas</strong> para criar documentos <strong>impecáveis</strong>. Seja para <strong>artigos</strong>, <strong>papers</strong>, <strong>livros</strong> ou <strong>apresentações</strong>, o LaTeX facilita todo o processo de formatação, garantindo que seu conteúdo tenha uma aparência profissional e bem organizada. Com apenas alguns cliques, você pode criar <strong>sumários automáticos</strong>, inserir <strong>fórmulas matemáticas</strong>, adicionar <strong>figuras com legendas</strong> e <strong>citações</strong> no corpo do texto, tudo de maneira simples e rápida.</p>
     <p>Venha aprender como utilizar essas ferramentas incríveis e transforme sua produção acadêmica e profissional com o LaTeX!</p>
   </div>
 
