--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <p>Venha aprender como utilizar essas ferramentas incríveis e transforme sua produção acadêmica e profissional com o LaTeX!</p>
   </div>
 
-  <a href="https://linktr.ee/7michelson" target="_blank" class="btn">INSCREVA-SE AGORA</a>
+  <a href="https://michelson-code.github.io/curso-latex-site/pagamento.html" target="_blank" class="btn">INSCREVA-SE AGORA</a>
 
   <footer>
     &copy; 2025 - Curso por Bruno Dantas | Powered by LaTeX & Overleaf
