--- a/pagamento.html
+++ b/pagamento.html
@@ -107,7 +107,7 @@
     }
 
     // Simulação: após 5 segundos (exemplo), "o pagamento foi processado"
-    setTimeout(enableConfirmButton, 5000);
+    setTimeout(enableConfirmButton, 5000); // Aqui simulamos que o pagamento foi confirmado após 5 segundos
   </script>
 
 </body>
