--- a/pagamento.html
+++ b/pagamento.html
@@ -79,10 +79,10 @@
 
     <!-- Exemplo de QR Code (substitua com seu QR Code real) -->
     <div class="qr-code">
-      <img src="https://via.placeholder.com/200x200.png?text=QR+Code" alt="QR Code Pix">
+      <img src="blob:null/1c42fcf4-608a-469a-a4f3-f2c0e49d52d8" alt="QR Code Pix">
     </div>
 
-    <p>Chave Pix: <strong>12345678900@dominio.com</strong></p>
+    <p>Chave Pix: <strong>96c8f4ce-73ba-484c-9085-ce2ca078efed</strong></p>
 
     <!-- Botão de confirmação desabilitado inicialmente -->
     <button id="confirmPaymentBtn" class="confirmation-btn" disabled onclick="confirmPayment()">Confirmar Pagamento</button>
