--- a/pagamento.html
+++ b/pagamento.html
@@ -79,7 +79,7 @@
 
     <!-- Exemplo de QR Code (substitua com seu QR Code real) -->
     <div class="qr-code">
-      <img src="blob:null/1c42fcf4-608a-469a-a4f3-f2c0e49d52d8" alt="QR Code Pix">
+      <img src="https://nubank.com.br/cobrar/ftpme/680b0f5a-4956-4369-b60b-51efffde7925" alt="QR Code Pix">
     </div>
 
     <p>Chave Pix: <strong>96c8f4ce-73ba-484c-9085-ce2ca078efed</strong></p>
