--- a/pagamento.html
+++ b/pagamento.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <!-- Favicon Adicionado -->
+  <link rel="icon" type="image/x-icon" href="fox-icon.ico">
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pagamento via Pix</title>
