--- a/pagamento.html
+++ b/pagamento.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <!-- Favicon Adicionado -->
-  <link rel="icon" type="image/x-icon" href="fox-icon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon_custom.ico">
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
