--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
 
     <div class="card">
-      <img src="https://writelatex.s3.amazonaws.com/published_ver/5647.jpeg?X-Amz-Expires=14400&X-Amz-Date=20250425T030103Z&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAWJBOALPNFPV7PVH5/20250425/us-east-1/s3/aws4_request&X-Amz-SignedHeaders=host&X-Amz-Signature=369693ece384f7af03b07b9dcdce641af9cd64f953f8b044aad69a3ad9f1c105" alt="Modelo 3">
+      <img src="http://www.edumed.org.br/cursos/neuroanatomia/Lab/paper3a.jpg" alt="Modelo 3">
     </div>
   </div>
 
