--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
 
     <div class="card">
-      <img src="http://www.edumed.org.br/cursos/neuroanatomia/Lab/paper3a.jpg" alt="Modelo 3">
+      <img src="modelos/modelo3.jpg" alt="Modelo 3">
     </div>
   </div>
 
