--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
   <div class="cards-container">
     <div class="card">
-      <img src="https://preview.redd.it/what-is-the-name-of-this-template-academic-paper-v0-202gbl7urmva1.png?width=663&format=png&auto=webp&s=8c543d1effcec232167d233ac7d1aabb175536ee" alt="Modelo 1">
+      <img src="modelos/modelo1.jpg" alt="Modelo 1">
     </div>
 
     <div class="card">
@@ -222,7 +222,7 @@
     </div>
 
     <div class="card">
-      <img src="modelos/modelo3.jpg" alt="Modelo 3">
+      <img src="modelos/modelo3.png" alt="Modelo 3">
     </div>
   </div>
 
