--- a/index.html
+++ b/index.html
@@ -218,12 +218,21 @@
     </div>
 
     <div class="card">
-      <img src="https://dxkck1miuebqc.cloudfront.net/books/316047/book_preview_big-7.jpg" alt="Modelo 2">
+      <img src="modelos/modelo2.png" alt="Modelo 2">
     </div>
 
     <div class="card">
       <img src="modelos/modelo3.png" alt="Modelo 3">
     </div>
+
+    <div class="card">
+      <img src="modelos/modelo4.png" alt="Modelo 2">
+    </div>
+
+    <div class="card">
+      <img src="modelos/modelo5.png" alt="Modelo 2">
+    </div>
+    
   </div>
 
   <div class="features-text">
