--- a/pagamento.html
+++ b/pagamento.html
@@ -98,7 +98,7 @@
 
     mp.checkout({
       preference: {
-        id: '2410853434-8d8d724f-d196-4c27-a05f-8b99ec5ca651' // ID da preferência para pagamento de 1 centavo
+        id: '2410853434-54ae74af-aff2-4d4e-970f-f5ccabb0847d' // <-- Novo ID da preferência!
       },
       render: {
         container: '.cho-container',
@@ -108,7 +108,7 @@
 
     function confirmPayment() {
       alert("Pagamento confirmado! Redirecionando para o Discord...");
-      window.location.href = "https://discord.com/invite/seu-canal";  // Altere para o link real do seu Discord
+      window.location.href = "https://discord.com/invite/seu-canal";  // Substitua pelo seu link real do Discord
     }
 
     window.onload = function() {
