--- a/pagamento.html
+++ b/pagamento.html
@@ -108,7 +108,7 @@
 
     function confirmPayment() {
       alert("Pagamento confirmado! Redirecionando para o Discord...");
-      window.location.href = "https://discord.com/invite/seu-canal";  // Substitua pelo seu link real do Discord
+      window.location.href = "https://discord.gg/RtbC9afagp";  // Substitua pelo seu link real do Discord
     }
 
     window.onload = function() {
