--- a/pagamento.html
+++ b/pagamento.html
@@ -77,6 +77,11 @@
     <h2>Finalize sua compra!</h2>
     <p>Valor: <strong>R$ 24,90</strong></p>
     <p>Clique no botão abaixo para pagar com Mercado Pago.</p>
+    <p style="color: red; font-weight: bold;">
+    Após realizar o pagamento, aguarde ser redirecionado automaticamente.<br>
+    Não clique manualmente em "Voltar".
+    </p>
+
     <p>Após o pagamento ser aprovado, o botão "Confirmar Pagamento" será liberado automaticamente.</p>
 
     <!-- Botão do Mercado Pago -->
