--- a/index.html
+++ b/index.html
@@ -160,6 +160,39 @@
   </style>
   <meta name="description" content="Aprenda a criar documentos profissionais no LaTeX com o curso 'Do Word ao LaTeX sem Sofrer'. Ideal para iniciantes!">
   <meta name="keywords" content="curso LaTeX, aprender LaTeX, documentos LaTeX, LaTeX para iniciantes">
+
+  <!-- Link para ícones do Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pagamento via Mercado Pago</title>
+    <style>
+        /* Aqui ficam os estilos que você já tem */
+
+      .whatsapp-btn {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 1000;
+    }
+
+    .whatsapp-btn button {
+        background-color: #25D366;
+        color: white;
+        padding: 10px 20px;
+        border-radius: 50px;
+        font-size: 1rem;
+        display: flex;
+        align-items: center;
+        border: none;
+        cursor: pointer;
+    }
+
+    .whatsapp-btn button i {
+        margin-right: 10px;
+    }
+    </style>
+  
 </head>
 <body>
 
@@ -244,6 +277,16 @@
   <a href="https://michelson-code.github.io/curso-latex/pagamento.html" target="_blank" class="btn">ADQUIRIR AGORA!</a>
 
   <footer>
+    <!-- Botão WhatsApp -->
+<div class="whatsapp-btn">
+    <a href="https://wa.me/84988133666" target="_blank">
+        <button style="background-color: #25D366; color: white; padding: 10px 20px; border-radius: 50px; font-size: 1rem;">
+            <i class="fab fa-whatsapp" style="margin-right: 10px;"></i>
+            Fale conosco no WhatsApp
+        </button>
+    </a>
+</div>
+
     &copy; 2025 - Curso por Bruno Dantas | Powered by LaTeX & Overleaf
   </footer>
 
