--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   <footer>
     <!-- Botão WhatsApp -->
 <div class="whatsapp-btn">
-    <a href="https://wa.me/84988133666" target="_blank">
+    <a href="https://wa.me/+5584988133666" target="_blank">
         <button style="background-color: #25D366; color: white; padding: 10px 20px; border-radius: 50px; font-size: 1rem;">
             <i class="fab fa-whatsapp" style="margin-right: 10px;"></i>
             Fale conosco no WhatsApp
