--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     }
 
     .whatsapp-btn button {
-        background-color: #25D366;
+        background-color: #0078FF;
         color: white;
         padding: 10px 20px;
         border-radius: 50px;
