--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     }
 
     .whatsapp-btn button {
-        background-color: #0078FF;
+        background-color: #FF5722; /* Laranja */
         color: white;
         padding: 10px 20px;
         border-radius: 50px;
@@ -280,7 +280,7 @@
     <!-- Botão WhatsApp -->
 <div class="whatsapp-btn">
     <a href="https://wa.me/+5584988133666" target="_blank">
-        <button style="background-color: #25D366; color: white; padding: 10px 20px; border-radius: 50px; font-size: 1rem;">
+        <button style="background-color: #0078FF; /* Azul claro */ color: white; padding: 10px 20px; border-radius: 50px; font-size: 1rem;">
             <i class="fab fa-whatsapp" style="margin-right: 10px;"></i>
             Fale conosco no WhatsApp
         </button>
