--- a/pagamento-sucesso.html
+++ b/pagamento-sucesso.html
@@ -30,7 +30,7 @@
   <h1>Pagamento confirmado! ✅</h1>
   <p>Obrigado por comprar o Curso de LaTeX!</p>
   
-  <a href="https://discord.com/invite/SEUCANAL" class="btn">Entrar no Canal do Discord</a>
+  <a href="https://discord.gg/RtbC9afagp" class="btn">Entrar no Canal do Discord</a>
 
 </body>
 </html>
